--- a/client/styles.css
+++ b/client/styles.css
@@ -8,8 +8,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--black);
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -27,6 +27,7 @@ header{
     box-sizing: border-box;
     text-align: center;
     color: var(--beige);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .title.group{
