--- a/client/styles.css
+++ b/client/styles.css
@@ -68,12 +68,17 @@ main{
     list-style: none;
     padding: 2%;
     border-radius: 15px;
-    transition: .5s;
+    transition: .75s;
 }
 
 .list:hover{
     background-color: var(--light-grey);
-    transition: .5s;
+    transition: .75s;
+}
+
+.list:hover .list__info.name{
+    font-weight: 700;
+    transition: .75s;
 }
 
 .list__profile{
@@ -89,6 +94,7 @@ main{
     padding: 2%;
     width: 70%;
     float: left;
+    transition: .5s;
 }
 
 .list__info.id{
