--- a/client/styles.css
+++ b/client/styles.css
@@ -42,27 +42,20 @@ main{
     justify-content: center;
 }
 
-.infoBox{
-    box-sizing: border-box;
-    width: 30vw;
-    padding: 3%;
-    height: 100%;
-}
-
 .infoSection{
     display: flex;
     justify-content: center;
     box-sizing: border-box;
     padding: 1%;
     background-color: var(--beige);
-    width: 70vw;
+    width: 100vw;
     height: 85vh;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
 .list{
-    width: 50%;
+    width: calc(100%/3);
     height: 35vh;
     float: left;
     box-sizing: border-box;
@@ -111,8 +104,6 @@ main{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    display: inline-block;
     text-align: center;
-    font-size: 200%;
     padding-top: 35%;
 }
